--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,1 @@
-SECRET_KEY=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_SERVER=
-POSTGRES_PORT=5432
-POSTGRES_DB=
+SQLALCHEMY_DATABASE_URL=postgresql://user:password@postgresserver/db
