--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,9 @@
-anyio==3.4.0
-asgiref==3.4.1
-click==8.0.3
-fastapi==0.70.0
-greenlet==1.1.2
-h11==0.12.0
-httptools==0.3.0
+anyio==3.5.0
+fastapi==0.72.0
+greenlet==1.1.2; python_version >= '3' and (platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32'))))))
 idna==3.3
-pip==21.3.1
-pydantic==1.8.2
-python-dotenv==0.19.2
-PyYAML==6.0
-setuptools==59.5.0
+pydantic==1.9.0
 sniffio==1.2.0
-SQLAlchemy==1.4.27
+sqlalchemy==1.4.29
 starlette==0.17.1
 typing-extensions==4.0.1
-uvicorn==0.15.0
-uvloop==0.16.0
-watchgod==0.7
-websockets==10.1
-wheel==0.37.0
-django-environ==0.8.1
-psycopg2-binary==2.9.2
