--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,23 @@
 anyio==3.5.0
+asgiref==3.4.1
+astroid==2.9.3
+click==8.0.3
+django-environ==0.8.1
 fastapi==0.72.0
 greenlet==1.1.2; python_version >= '3' and (platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32'))))))
+h11==0.12.0
 idna==3.3
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.6.1
+platformdirs==2.4.1
+psycopg2-binary==2.9.3
 pydantic==1.9.0
+pylint==2.12.2
 sniffio==1.2.0
 sqlalchemy==1.4.29
 starlette==0.17.1
-typing-extensions==4.0.1
+toml==0.10.2
+typing-extensions==4.0.1; python_version < '3.10'
+uvicorn==0.17.0
+wrapt==1.13.3
