main file made into smaller router files added index.html for main page leading to the 2 different Docs UIs more crud methods added models rework

--- a/Pipfile
+++ b/Pipfile
@@ -15,8 +15,12 @@ httplib2 = "*"
 google = "*"
 google-api-python-client = "*"
 oauth2client = "*"
+jinja2 = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.9"
+
+[packages.passlib]
+extras = [ "bcrypt",]
