Added auth.py router. Added crud methods for creating and getting a User from the DB. Added get_current_user dependency. Added metadata.py for storing metadata for the endpoint categories. In main.py added metadata for the API and auth router. User model changes. In schemas.py: - User schemas changed - Added Auth schemas

--- a/Pipfile
+++ b/Pipfile
@@ -10,17 +10,18 @@ uvicorn = "*"
 psycopg2-binary = "*"
 pylint = "*"
 django-environ = "*"
-pyjwt = "*"
+PyJWT = "*"
 httplib2 = "*"
-google = "*"
-google-api-python-client = "*"
 oauth2client = "*"
-jinja2 = "*"
+Jinja2 = "*"
+passlib = "*"
+cryptography = "*"
+openpyxl = "*"
+python-jose = "*"
+python-multipart = "*"
+email-validator = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.9"
-
-[packages.passlib]
-extras = [ "bcrypt",]
