--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ certifi==2021.10.8
 charset-normalizer==2.0.11; python_version >= '3'
 click==8.0.3
 django-environ==0.8.1
-fastapi==0.73.0
+fastapi~=0.74.1
 google-api-core==2.5.0
-google-api-python-client==2.36.0
+google-api-python-client~=2.37.0
 google-auth-httplib2==0.1.0
 google-auth==2.6.0
 google==3.0.0
@@ -44,3 +44,6 @@ uritemplate==4.1.1
 urllib3==1.26.8
 uvicorn==0.17.4
 wrapt==1.13.3
+
+passlib~=1.7.4
+jwt~=1.3.1
