databse.py: database url creation updated .env.example: added more variables

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-SQLALCHEMY_DATABASE_URL=postgresql://user:password@postgresserver/db
+DB_USERNAME=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+
 SECRET_KEY=
-ALGORITHM=
-TOKEN_EXPIRATION=minutes
+ALGORITHM=HS256
+TOKEN_EXPIRATION=30
