--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 anyio==3.5.0
 asgiref==3.5.0
+certifi==2021.10.8
 cffi==1.15.0
-click==8.0.4
-cryptography==36.0.1
+charset-normalizer==2.0.12; python_version >= '3'
+click==8.1.0
+cryptography==36.0.2
 django-environ==0.8.1
 dnspython==2.2.1
 ecdsa==0.17.0
@@ -10,23 +12,23 @@ email-validator==1.1.3
 fastapi==0.75.0
 greenlet==1.1.2; python_version >= '3' and (platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32'))))))
 h11==0.13.0
-httplib2==0.20.4
-idna==3.3
-jinja2==3.0.3
-markupsafe==2.1.0
+idna==3.3; python_version >= '3'
+jinja2==3.1.1
+markupsafe==2.1.1
 passlib==1.7.4
 psycopg2-binary==2.9.3
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.0
 pyjwt==2.3.0
-pyparsing==3.0.7; python_version > '3.0'
 python-jose==3.3.0
 python-multipart==0.0.5
+requests==2.27.1
 rsa==4.8
 six==1.16.0
 sniffio==1.2.0
-sqlalchemy==1.4.29
+sqlalchemy==1.4.32
 starlette==0.17.1
 typing-extensions==4.1.1
-uvicorn==0.17.5
+urllib3==1.26.9
+uvicorn==0.17.6
